[package]
name = "request-window-attention"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "在 windows 系统，根据窗体“标题名”闪烁窗体的任务栏图标来请求用户注意"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nodejs = ["node-bindgen"]

[[bin]]
name = "request_window_attention_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
node-bindgen = { version = "5.1", optional = true }
winapi = {version = "0.3.9", features = ["winuser"] }

[build-dependencies]
node-bindgen = { version = "5.1", optional = true, features = ["build"] }
cbindgen = "0.24.3"